added 2 new commands